# maxbin-rs

./: .gitignore  ACCEPTANCE.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-ORIGINAL  PAPER.md  README.md  TODO.md  VERSIONING.md  build.rs  flake.nix
.github/workflows/: ci.yml  docker.yml
docs/: code-review-prompts.md  review-prompts.md
docs/research/: original-codebase.md  reference-output-hashes.md  test-data-sources.md
nix/: _getmarker_debug.pl  datasets.nix  docker-test.nix  fraggenescan-rs.nix  fraggenescan.nix  intermediates.nix  maxbin2-cpp-ffi.patch  maxbin2-deterministic.patch  maxbin2-timing.patch  maxbin2-trace-logging.patch  maxbin2.nix  tests.nix
scripts/: chart-timing.py
src/: abundance.rs  cli.rs  distance.rs  emanager.rs  external.rs  fasta.rs  kmer_map.rs  lib.rs  main.rs  normal_distribution.rs  original_ffi.rs  paths.rs  pipeline.rs  profiler.rs  quicksort.rs
tests/: bench-genecaller.sh  bench-pipeline.sh  bench_components.rs  cli-equivalence.sh  cli-integration.sh  cli-recursion-smoke.sh  cli_list_files.rs  emanager_equivalence.rs  equivalence-e2e.sh  pipeline-stages.sh  pipeline-trace.sh  proptest_abundance.rs  proptest_distance.rs  proptest_emanager.rs  proptest_fasta.rs  proptest_kmermap.rs  proptest_normal_distribution.rs  proptest_profiler.rs  proptest_quicksort.rs  sam_to_abund.rs
tests/fixtures/divergent-em/: abund  contigs.fa  seed
